{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 26,
  "lineage": "42bf7e8d-168a-63a7-b8d5-79fc720eccde",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "bookstore_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:120123127742:loadbalancer/app/bookstore-alb/9cfc857c2cefd4d3",
            "arn_suffix": "app/bookstore-alb/9cfc857c2cefd4d3",
            "desync_mitigation_mode": "defensive",
            "dns_name": "bookstore-alb-1746340379.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:120123127742:loadbalancer/app/bookstore-alb/9cfc857c2cefd4d3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "bookstore-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ff7eb6a75a56a237"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-032298ff169b090c5"
              },
              {
                "subnet_id": "subnet-033cda4996af4ed94"
              }
            ],
            "subnets": [
              "subnet-032298ff169b090c5",
              "subnet-033cda4996af4ed94"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "bookstore-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "bookstore-alb"
            },
            "vpc_id": "vpc-081e3e04646dfe377",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_subnets.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:120123127742:listener/app/bookstore-alb/9cfc857c2cefd4d3/c7d85d209c1f901a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:120123127742:targetgroup/bookstore-tg/ff163c9034490687",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:120123127742:listener/app/bookstore-alb/9cfc857c2cefd4d3/c7d85d209c1f901a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:120123127742:loadbalancer/app/bookstore-alb/9cfc857c2cefd4d3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.bookstore_alb",
            "aws_lb_target_group.bookstore_tg",
            "aws_security_group.alb_sg",
            "data.aws_subnets.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "bookstore_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:120123127742:targetgroup/bookstore-tg/ff163c9034490687",
            "arn_suffix": "targetgroup/bookstore-tg/ff163c9034490687",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:120123127742:targetgroup/bookstore-tg/ff163c9034490687",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "bookstore-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "bookstore-tg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "bookstore-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-081e3e04646dfe377"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120123127742:security-group/sg-0ff7eb6a75a56a237",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ff7eb6a75a56a237",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bookstore-alb-sg",
            "name_prefix": "",
            "owner_id": "120123127742",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "bookstore-alb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "bookstore-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-081e3e04646dfe377"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120123127742:security-group/sg-04e153f73ef8be1fd",
            "description": "Security group for RDS MySQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e153f73ef8be1fd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02d5a53470f713c3a"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "bookstore-db-sg",
            "name_prefix": "",
            "owner_id": "120123127742",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "bookstore-db-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "bookstore-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-081e3e04646dfe377"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.instance_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120123127742:security-group/sg-09717c6b7943ac0e8",
            "description": "Security group for EFS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09717c6b7943ac0e8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02d5a53470f713c3a"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "bookstore-efs-sg",
            "name_prefix": "",
            "owner_id": "120123127742",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "bookstore-efs-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "bookstore-efs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-081e3e04646dfe377"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.instance_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120123127742:security-group/sg-02d5a53470f713c3a",
            "description": "Security group for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02d5a53470f713c3a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ff7eb6a75a56a237"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "bookstore-instance-sg",
            "name_prefix": "",
            "owner_id": "120123127742",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "bookstore-instance-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "bookstore-instance-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-081e3e04646dfe377"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg"
          ]
        }
      ]
    }
  ]
}